fix: workshop padding on mobile

--- a/client/components/workshops/workshops.styl
+++ b/client/components/workshops/workshops.styl
@@ -5,7 +5,7 @@ $workshop-width = 400px
   background-size 110%
   border-top 6px solid $primary
   min-height 100vh
-  padding-bottom 100px
+  padding-bottom 140px
   text-align center
 
 .info
